Fixed bug that I missed from last commit that made image hover transition not work properly. Added to and aligned the About Me page text. Changed links for email and resume on Connect page to be black by default, then blue when hovered over.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,6 +45,15 @@ body {
   color: white;
 }
 
+/* Make links dark */
+#dark_link {
+  color: black;
+}
+
+#dark_link:hover {
+  color: blue;
+}
+
 /* Change color on hover */
 .topnav a:hover {
   background-color: #ddd;
